fix subpixel rendering bleed issue

--- a/src/components/project-colors.css
+++ b/src/components/project-colors.css
@@ -11,6 +11,7 @@
   position: absolute;
   right: 0;
   top: 0;
+  z-index: -1;
 }
 
 .project-color.guess-the-word {
